--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,56 +1,79 @@
-<h1>Eat Da Burger</h1>
+<div class = "container">
 
-<h2>Burgers that are not sleepy!</h2>
+  <div class = "row">
 
-<ul>
-  {{#each burgers}}
-    {{#unless this.devoured}}
-      <li>
-        {{this.name}}
+    <div class = "col-xs-12 text-center" id = "top-bar">
+      <h1>
+        Eat Da Burger
+      </h1>
+    </div> {{!-- end of class = "col-xs-12 text-center" id = "top-bar" --}}
 
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="true">
-          <button type="submit">Devour It!</button>
-        </form>
+    <div class = "col-xs-6 text-center" class = "task">
 
-        {{> burgers/delete-burger}}
-      </li>
-    {{/unless}}
-  {{/each}}
-</ul>
+      <div class = "row">
 
-<h2>Burgers that are devoured!</h2>
+        {{#each burger_data}}
+          {{#unless this.devoured}}
 
-<ul>
-  {{#each burgers}}
-    {{#if this.devoured}}
-      <li>
-        {{this.name}}
+          <div class = "col-xs-9 text-center">
+            <pre> {{this.id}}.{{this.burger_name}} </pre>
+          </div> {{!-- end of class = "col-xs-9 text-center" --}}
+          <div class = "col-xs-3 text-center">
+            <form method = "POST" action = "/burgers/update?_method=PUT" class = "button-size" >
+              <input type="hidden" name="burger_id" type="text" value = {{this.id}}>
+              <br>
+              <button type = "submit" class = "btn btn-default">
+                Devour
+              </button>
+            </form> {{!-- end of method = "POST" --}}
 
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="false">
-          <button type="submit">Create again!</button>
-        </form>
+          </div> {{!-- end of class = "col-xs-3 text-center" --}}
 
-        {{> burgers/delete-burger}}
-      </li>
-    {{/if}}
-  {{/each}}
-</ul>
+      {{/unless}}
+      
+      {{/each}}
 
-<h2>Add a Burger</h2>
-<form class="create-update-form" action="/" method="POST">
+      </div> {{!-- end of class = "row" --}}
 
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
+    </div> {{!-- end of class = "col-xs-6 text-center" class = "task" --}}
 
-  <div class="form-group">
-    <label for="slee">Deour?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devour!<br>
-    <input type="radio" name="devoured" value="0"> Available
-  </div>
+    <div class = "col-xs-6 text-center" class = "task">
+      {{#each burger_data}}
+        {{#if this.devoured}}
+          <input class = "form-control" type = "text" placeholder="{{this.id}}. {{this.burger_name}}" readonly>
+        {{/if}}
+      {{/each}}
+    </div> {{!-- end of class = "col-xs-6 text-center" class = "task" --}}
 
-  <button type="submit">Add Burger</button>
-</form>
+  </div> {{!-- end of class = "row" --}}
+
+</div> {{!-- end of class = "container" --}}
+
+<div class="container">
+
+  <div class="row">
+
+    <div class="col-xs-12 text-center enter_section">
+
+    <form action="/burgers/create" method="POST">
+
+      <input type="text" name="burger_name" class="form-control" value="" id="enter_text">
+
+      <button type="submit" class="btn btn-primary" id="text-enter-button">
+
+        Submit
+
+      </button>
+
+    </form> {{!-- end of action="/burgers/create" method="POST" --}}
+
+    <p>
+      Enter a new burger.
+    </p>
+
+    </div> {{!-- end of "col-xs-12 text-center enter_section" --}}
+
+  </div> {{!-- end of class="row" --}}
+
+</div> {{!-- end of class="container" --}}
+
